		* Fixed creation of ED2K links without sources, where an
		  superflous "|/" would be appended to the end of the link.
		* Fixed handling of spaces when creating ED2k links. These are
		  now escaped.
		* Fixed swapped notify-functions, which would cause clients to
		  be left on the upload-queue ctrl, even if the underlying
		  object was deleted.

	xor:
		* Fix for crash on amuled when starting up kademlia.

	ycjhi:
		* fix for OSX aMule-CVS-20071115 fails in loading libixml and
		  libupnp.
		* fix for aMule-CVS-20071115 doesn't update server.met on
		  startup.

	Special Thanks to:
		* FreeToGo for implementing the first version of IP2Country on
		  the forum.
		* Mark James (http://www.famfamfam.com) for providing the
		  flags icons.
		* deloun and mischamajskij for their work on aMule skins
		* Bun Bun, for being there to tell me I'm not stupid.

--------------------------------------------------------------------------------

Version 2.1.3 - The "We missed the 6/6/6 devil release and we're very sad" version
----------
2006-06-11

	GonoszTopi:
		* Fixed windows compilation, that was still broken.
		* Fixed locale bug. See http://forum.amule.org/thread.php?threadid=10178&sid=

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.
		* Fixed SmartLowID checks based on a patch/report by eyalzo.

	Kry:
		* Fixed GonozsTopi's fix for locale bug (double init).
		* Added script to import mldonkey downloads into aMule.
		* Fixed "0000867: French traduction is uncorrect grammatically".

	rene06:
		* Allow amulecmd to execute a global, local or kad search. Then
		  you can get the results, which are shown in a list. From that
		  list you can choose one file to download.

	Special Thanks to:
		* Me, because I'm the only one bothering to compile the changelogs. Go me!

--------------------------------------------------------------------------------

Version 2.1.2 - The "We're on fire!" version
----------
2006-03-28

	GonoszTopi: